# kualix

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
core/: consts.py  datatools.py  forms.py  urls.py  views.py
core/static/css/: style.css
core/templates/: index.html
nginx/: nginx.conf
project/: settings.py
templates/: base.html
