[tool.poetry]
name = "kualix"
version = "0.1.0"
description = ""
authors = ["Ilgiz Rakhimianov <i@rakhimianov.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
